<resources>
    <string name="app_name">HealthcarePortal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_medication">Medication</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_admin_home">Admin Home</string>
    <string name="menu_admin_medication">Admin Medication</string>
    <string name="menu_admin_orders">Admin Orders</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="send_password">Enter email to be sent a reset password link</string>
    <string name="send">Send</string>

    <string name="ordernumber">Order Number: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
