<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_admin_home">

    <fragment
        android:id="@+id/nav_admin_home"
        android:name="edu.nyit.healthcareportal.ui.home.AdminHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_admin_home">

    </fragment>
    <fragment
        android:id="@+id/nav_admin_medication"
        android:name="edu.nyit.healthcareportal.ui.medication.AdminMedicationFragment"
        android:label="@string/menu_medication"
        tools:layout="@layout/fragment_admin_medication" />

    <fragment
        android:id="@+id/nav_admin_orders"
        android:name="edu.nyit.healthcareportal.ui.orders.AdminOrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_admin_orders" />

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.nyit.healthcareportal.ui.home.PatientHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/switchFragments"
            app:destination="@+id/nav_admin_home"
            app:popUpTo="@+id/nav_home"
            app:popUpToInclusive="true"/>


    </fragment>
    <fragment
        android:id="@+id/nav_medication"
        android:name="edu.nyit.healthcareportal.ui.medication.PatientMedicationFragment"
        android:label="@string/menu_medication"
        tools:layout="@layout/fragment_medication" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="edu.nyit.healthcareportal.ui.orders.PatientOrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/logout"
        android:name="edu.nyit.healthcareportal.ui.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>