<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#264237"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/password"
            android:inputType="textPersonName|textPassword|textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#A1E4C5"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/login"
            android:textColor="#112E0A" />

        <TextView
            android:id="@+id/fogotPasswordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic" />


    </LinearLayout>

</LinearLayout>